<resources>
    <string name="app_name">ItineraryBuddy</string>

    <string name="username_text">USERNAME</string>
    <string name="password_text">PASSWORD</string>
    <string name="create_account_text">CREATE NEW ACCOUNT</string>
    <string name="new_user_text">NEW USER?</string>
    <string name="itinerarybuddy_text">ItineraryBuddy</string>
    <string name="login_text">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="email_text">EMAIL</string>
    <string name="confirm_password_text">CONFIRM PASSWORD</string>
    <string name="sign_in_here_text">OR SIGN IN HERE</string>

    <string name="admin_dashboard_txt">Admin Dashboard</string>
    <string name="confirm">Confirm</string>
    <string name="enter_user_id">Enter Username</string>
    <string name="delete_public_itinerary">Delete public itinerary</string>
    <string name="disable_user_posting_permissions">Disable user posting permissions</string>
    <string name="revoke_ambassador_status">Revoke Ambassador Status</string>
    <string name="grant_ambassador_status">Grant Ambassador Status</string>
    <string name="return_home">RETURN HOME</string>
    <string name="grant_admin_access">Grant Admin Access</string>
    <string name="revoke_admin_access">Revoke Admin Access</string>
    <string name="enable_user_posting">Enable User Posting Permissions</string>

    <string name="title_activity_personal_page1">personalPage1</string>
    <string name="title_personal">Personal</string>
    <string name="title_community">Community</string>
    <string name="title_ambassador">Photo Blog</string>
    <string name="title_appName">ItineraryBuddy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itemDay">Day</string>
    <string name="itemDate">Date</string>
    <string name="itemTime">Time</string>
    <string name="itemPlaces">Places</string>
    <string name="itemNote">Note</string>
    <string name="your_groups">Your Travel Groups</string>
    <string name="join_a_travel_group_to_meet_new_people_plan_amazing_trips_and_have_a_fun_time">Join a travel group to meet new people, plan amazing trips, and have a fun time!</string>
    <string name="leave_group">Leave Group</string>
    <string name="view_group">View Group</string>
    <string name="back_button">Back Button</string>
    <string name="options_button">options_button</string>
    <string name="chat_button">chat button</string>
    <string name="group_overview">Group Overview</string>
    <string name="find_groups">Join Group</string>
    <string name="add_group">add group</string>
    <string name="travel_groups">Travel Groups</string>
    <string name="view_group_members">View Group Details</string>
    <string name="enter_group_code">Enter Travel Group Code</string>
    <string name="group_code">Group Code</string>
    <string name="travel_groups_nav">Travel Groups</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Enter Group Name</string>
    <string name="enter_group_destination">Enter Group Destination</string>
    <string name="enter_group_description">Enter Group Description</string>
    <string name="group_members">Group Members</string>
    <string name="edit_travel_group">Edit Travel Group</string>
    <string name="message">Send a Message</string>
    <string name="send">Send</string>
    <string name="group_chat">Group Chat</string>
    <string name="back">Back</string>
    <string name="group">group</string>
    <string name="select_group_cover_image">Select Group Cover Image</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="group_image">Group Image</string>
    <string name="group_cover_image">Group Image</string>
    <string name="place_holder_for_itinerary">(Place Holder for Group Itinerary)</string>
    <string name="set_group_cover_image">Set Group Cover Image</string>
    <string name="selected_image">Selected Image</string>
    <string name="select_an_image">Select an Image</string>
    <string name="remove_group_image">Remove Group Image</string>
    <string name="destination">Destination:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="number_of_days">Number of Days:</string>
    <string name="edit">Edit</string>
    <string name="photo">Photo</string>
    <string name="add_a_photo">Add a Photo</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="logout">Logout</string>
    <string name="your_itineraries">YOUR ITINERARIES</string>
    <string name="create_itinerary">Create Itinerary</string>



</resources>