...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back_button"/>

    <ImageButton
        android:id="@+id/create_group_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="120dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/create_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groups_description"
        app:srcCompat="@drawable/group_create" />

    <ImageButton
        android:id="@+id/add_group_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="73dp"
        android:background="@android:color/transparent"
...
